# VN-agent

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  eval_ollama_results.json  eval_strategy_results.json  eval_structural_results.json  pyproject.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml
config/: music_library.yaml  settings.yaml
config/presets/: budget.yaml  groq_free.yaml  ollama_local.yaml
docs/: DEV_LOG.md  MVP_TEST_PLAN.md  PRODUCT.md  RESUME.md
docs/v1/: RESUME.md  SHOWCASE_GUIDE.md  VN-Agent_PRD_v2.md  interview_prep.md
docs/v2/: RESUME_v2.md  SHOWCASE_GUIDE_v2.md  interview_prep_v2.md
examples/: sample_input.yaml
frontend/: index.html  package-lock.json  vite.config.ts
frontend/css/: style.css
frontend/js/: api.js  app.js  ui.js
frontend/src/: App.tsx  api.ts  app.css  store.ts  types.ts
frontend/src/components/: AssetPanel.tsx  ChatPanel.tsx  JobHistory.tsx  PreviewPanel.tsx  ProgressBar.tsx  ScriptPanel.tsx  SettingPanel.tsx  StatusBar.tsx  VNPreview.tsx
scripts/: check_gemini_access.py  eval_ollama.py  eval_real_api.py  eval_strategy_adherence.py  eval_structural.py  regen_sprites.py  rejudge_sweep.py  run_real_demo.py  run_sweep.py  update_docs.py
src/vn_agent/: __init__.py  cli.py  config.py
src/vn_agent/agents/: baseline_runners.py  callbacks.py  character_designer.py  director.py  graph.py  local_regen.py  music_director.py  persona_audit.py  reviewer.py  scene_artist.py  state.py  state_orchestrator.py  structure_reviewer.py  summarizer.py  unknown_chars.py  writer.py
src/vn_agent/compiler/: project_builder.py  renpy_compiler.py
src/vn_agent/compiler/templates/: characters.rpy.j2  gui.rpy.j2  init.rpy.j2  script.rpy.j2
src/vn_agent/eval/: __init__.py  corpus.py  corpus_loader.py  embedder.py  fusion.py  lore.py  pipeline_eval.py  retriever.py  strategy_eval.py  strategy_metrics.py
src/vn_agent/observability/: __init__.py  tracing.py
src/vn_agent/prompts/: __init__.py  templates.py
src/vn_agent/schema/: character.py  emotions.py  music.py  script.py
src/vn_agent/services/: bg_remove.py  image_gen.py  llm.py  mock_llm.py  music_gen.py  preflight.py  streaming.py  token_tracker.py  tools.py
src/vn_agent/strategies/: narrative.py
src/vn_agent/web/: __init__.py  app.py  store.py
tests/: test_schema.py
tests/test_agents/: test_callbacks.py  test_character_designer.py  test_creator_pause.py  test_director.py  test_persona_audit.py  test_reviewer.py  test_unknown_chars.py  test_writer.py
tests/test_cli/: test_cli.py
tests/test_compiler/: test_renpy_compiler.py
tests/test_eval/: test_corpus.py  test_corpus_loader.py  test_embedder.py  test_fusion.py  test_lore.py  test_retriever.py  test_strategy_eval.py  test_strategy_metrics.py
tests/test_integration/: test_pipeline.py  test_real_api.py
tests/test_observability/: test_tracing.py
tests/test_prompts/: test_templates.py
tests/test_services/: test_image_gen.py  test_llm.py  test_mock_llm.py  test_music_gen.py  test_preflight.py  test_streaming.py  test_token_tracker.py  test_tools.py
tests/test_web/: test_app.py  test_store.py
