[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vn-agent"
version = "0.1.0"
description = "Multi-agent AI visual novel generator"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tenacity>=8.0",
    "httpx>=0.27",
    "pillow>=10.0",
    "pydub>=0.25",
    "rich>=13.0",
]

[project.scripts]
vn-agent = "vn_agent.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
