[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vn_agent"]

[project]
name = "vn-agent"
version = "0.1.0"
description = "Multi-agent AI visual novel generator"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tenacity>=8.0",
    "httpx>=0.27",
    "pillow>=10.0",
    "pydub>=0.25",
    "rich>=13.0",
    "python-multipart>=0.0.22",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.30"]
rag = ["sentence-transformers>=2.0", "faiss-cpu>=1.7", "numpy>=1.24"]
# Sprint 12-3b: transparent-background sprite cutout (u2net via rembg).
# Local ONNX inference, ~1-3s/sprite, no external API. Optional so the
# base install stays slim — pipeline degrades to colored-bg sprites when
# missing (with a startup warning).
cutout = ["rembg>=2.0", "onnxruntime>=1.17"]

[project.scripts]
vn-agent = "vn_agent.cli:app"

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/vn_agent/services/mock_llm.py" = ["E501"]  # JSON fixture strings

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: marks tests that call real APIs (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
omit = [
    "src/vn_agent/eval/embedder.py",      # requires sentence-transformers + faiss (optional [rag] extra)
    "src/vn_agent/eval/pipeline_eval.py",  # requires real LLM API
    "src/vn_agent/services/image_gen.py",  # requires OpenAI DALL-E API
]
